# cse251b-final-project

./: .gitignore  README.md  expectimax_100_trials.csv  makefile  metrics.py  monte_carlo_10_10_0.txt  monte_carlo_1_1_0.txt  monte_carlo_branch=100_ngames=1_method=3.csv  plots.py  pyproject.toml  test.py
QN/: DQN.py  DQN_II.py  metrics.py
c/: 2048.c  2048_tuple_network.cpp  Makefile  avg_parser.py  compile_commands.json  mcts_data_parser.py  monte_carlo_branch=100_ngames=100_method=0.csv  monte_carlo_branch=100_ngames=100_method=1.csv  monte_carlo_branch=100_ngames=100_method=2.csv  monte_carlo_branch=100_ngames=100_method=3.csv  monte_carlo_branch=250_ngames=100_method=0.csv  monte_carlo_branch=50_ngames=100_method=0.csv  monte_carlo_branch=50_ngames=100_method=1.csv  monte_carlo_branch=50_ngames=100_method=3.csv  random_data.txt  random_data_parser.py  temp.h  train_data.txt  train_data_parser.py  train_parser.py
data/: data_random=1000_ngames=100_method=2.csv  expectimax_100_trials.csv  mcts_plots.py  metrics.py  monte_carlo_branch=100_ngames=100_method=1.csv  monte_carlo_branch=250_ngames=100_method=1.csv  monte_carlo_branch=250_ngames=100_method=2.csv  monte_carlo_branch=250_ngames=100_method=3.csv  monte_carlo_branch=50_ngames=100_method=1.csv  monte_carlo_branch=50_ngames=100_method=2.csv  rollout_best=250_games=100_method=3.csv  tuple_network_ngames100_4M.csv  tuple_network_ngames=100.csv
mcts/: 2048-old.py  2048_UI.py  README.md  check_2048.py  check_cur.py  iterations.txt  iterations2.txt  logic2048.py  monte_carlo_100_100_0.txt  monte_carlo_100_100_1.txt  (+18 more)
(+19 files in other folders)
